--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -10,6 +10,7 @@
     linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), 
     url("/photo_2_2025-09-20_00-42-26.jpg");  
     background-repeat: no-repeat;
+    background-position: center;
     background-size: cover;
     background-attachment: fixed;
     height: 70vh;
@@ -121,4 +122,10 @@ hr {
     left: 50%;
     transform: translateX(-50px);
     bottom: -40px;
+}
+
+@media (max-width: 500px) {
+    .box img{
+        height: 15rem ;
+    }
 }
