--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,7 @@ body {
   font-family: 'Open Sans', Helvetica, 'Helvetica Neue', sans-serif,
                'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
+
+h1, h2 {
+  font-weight: 600;
+}
