--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -9,12 +9,12 @@ a {
     text-decoration: none;
 }
 
-a:hover {
-    opacity: 0.8;
-}
-
 .profile {
     font-size: 1.5rem;
+}
+
+.profile:hover {
+    opacity: 0.8;
 }
 
 .bottom-links {
