--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -22,6 +22,7 @@
 
 .custom-btn {
     width: 250px;
+    display: inline-block;
     padding: 10px 0;
     background-color: #22335f;
     color: #fff;
@@ -35,6 +36,10 @@
 .custom-btn:hover {
     background-color: #1b294c;  
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+a:hover {
+    opacity: 1 !important;
 }
 
 .btn-icon {
