--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -8,7 +8,7 @@
 .bg-home {
     background: 
     linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), 
-    url("/photo_2_2025-09-20_00-42-26.jpg");  
+    url("/img1.webp");  
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
