--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -19,6 +19,7 @@ a {
 
 .bottom-links {
     display: flex;
+    gap: 10px;
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
